--- a/index.html
+++ b/index.html
@@ -820,15 +820,15 @@
             <div class="contact-content">
                 <p>I'm always open to discussing new opportunities, interesting projects, or just connecting with fellow developers.</p>
                 <div class="contact-links">
-                    <a href="mailto:divaagar@example.com" class="contact-link">
+                    <a href="mailto:divaagar@gmail.com" class="contact-link">
                         <i class="fas fa-envelope"></i>
                         divaagar@example.com
                     </a>
-                    <a href="https://linkedin.com/in/divaagar" target="_blank" class="contact-link">
+                    <a href="https://www.linkedin.com/in/divaagarrb/" target="_blank" class="contact-link">
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
                     </a>
-                    <a href="https://github.com/divaagar" target="_blank" class="contact-link">
+                    <a href="https://github.com/divaagar-rb" target="_blank" class="contact-link">
                         <i class="fab fa-github"></i>
                         GitHub
                     </a>
@@ -893,5 +893,7 @@
 </body>
 </html>
 <div>
+
+
 
 </div>
